# colleges-ai-uas

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/common/: env.py
src/configs/: memory.py  rapidapi.py
src/core/: analytics.py  base.py
src/models/: twitter.py
